--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
     "postcss": "^8.5.5",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
-  }
+  },
+  "devDependencies": {
+  "eslint": "^9.0.0",
+  "eslint-config-next": "^14.0.0"
+}
 }
