--- a/package.json
+++ b/package.json
@@ -22,14 +22,13 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "autoprefixer": "^10.4.21",
+    "autoprefixer": "10.4.20",
     "cross-env": "^7.0.3",
-    "postcss": "^8.5.5",
-    "tailwindcss": "^3.4.17",
-    "typescript": "^5"
-  },
-  "devDependencies": {
-  "eslint": "^9.0.0",
-  "eslint-config-next": "^15.0.0"
-}
+    "postcss": "8.4.47",
+    "tailwindcss": "3.4.13",
+    "typescript": "^5",
+    "eslint": "^9.0.0",
+    "eslint-config-next": "^15.0.0",
+  }
+
 }
