--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "actscrapmetaltradingltd",
   "version": "0.1.0",
@@ -18,7 +17,6 @@
     "recharts": "^3.0.2"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -28,7 +26,6 @@
     "tailwindcss": "3.4.13",
     "typescript": "^5",
     "eslint": "^9.0.0",
-    "eslint-config-next": "^15.0.0",
+    "eslint-config-next": "^15.0.0"
   }
-
 }
